# obrc-rs

./: Cargo.toml  results.json
.cargo/: config.toml
benches/: criterion.rs  obrc.rs
src/: lib.rs
