[package]
name = "obrc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7.2"
memmap2 = "0.9.4"
num_cpus = "1.16.0"
pretty_assertions = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
debug = true

[[bench]]
name = "obrc"
harness = false

[[bench]]
name = "criterion"
harness = false
